# valentina-noir

./: .cursorignore  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .typos.toml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  compose-db.yml  compose.yml  duties.py  env.example  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/actions/setup_python_env/: action.yml
.github/workflows/: automated-tests.yml  create-release.yml  deploy-docs.yml  lint-docs.yml  reusable-tests.yml  test-docker-build.yml
.glue/: manifest.json
docs/: index.md
docs/concepts/: character_blueprint.md  character_concepts.md  character_traits.md  characters.md  company_settings.md  dice.md  dictionary.md  experience.md  index.md  quick_rolls.md  storytellers.md
docs/core-concepts/: characters.md  company-settings.md  experience.md  index.md  rolling-dice.md  settings.md
docs/css/: material.css
docs/development/: authentication.md  companies.md  idempotency.md  index.md  rate-limiting.md  user-management.md
docs/python-api-client/: campaign_books.md  campaign_chapters.md  campaigns.md  character_autogen.md  character_blueprint.md  character_traits.md  characters.md  companies.md  configuration.md  developers.md  dice_rolls.md  dictionary.md  global_admin.md  index.md  models.md  options.md  system.md  users.md
docs/quickstart/: campaigns.md  character_sheet.md  characters.md  dice_rolls.md  index.md  setup.md  users.md
docs/roadmap/: index.md
docs/superpowers/: postgres-integration-guide.md
docs/technical/: assets.md  audit_logs.md  authentication.md  companies.md  enumerated_values.md  errors.md  global_admin.md  idempotency.md  index.md  pagination.md  rate_limits.md  request_ids.md  user_management.md
scripts/: docker_entry.sh  populate_dev_db.py
scripts/dev_data/: __init__.py  api_keys.py  bootstrap.py  config.py  constants.py  fake.py  generators.py  safety.py
scripts/migrate/: .env.old.example  __init__.py  config.py  id_map.py  main.py  new_db.py  old_db.py  s3_copy.py  transformers.py
src/vapi/: __init__.py  __main__.py  asgi.py  constants.py
src/vapi/cli/: __init__.py  bootstrap.py  constants.py  developer.py  development.py  migrate.py  restore.py  seed.py
src/vapi/cli/lib/: __init__.py  bootstrap.py  comparison.py  development.py  dictionary.py  factories.py  fixture_syncer.py  gift_syncer.py  population.py  runner.py  sync_counts.py  trait_power_syncer.py  trait_syncer.py  upsert.py  utils.py
src/vapi/cli/schemas/: __init__.py
src/vapi/config/: __init__.py  base.py  oauth.py
src/vapi/db/: archivable.py
src/vapi/domain/: __init__.py  deps.py  dto.py  paginator.py  pg_deps.py  urls.py  utils.py
src/vapi/lib/: audit_changes.py  crypt.py  database.py  db_restore.py  detail_includes.py  dto.py  exceptions.py  guards.py  log_config.py  log_formatters.py  patch.py  pg_guards.py  postgres_database.py  rate_limit_policies.py  scheduled_tasks.py  stores.py  uptime.py  validation.py
src/vapi/middleware/: api_key_auth.py  authentication.py  basic_auth.py  cache_control_headers.py  idempotency.py  proxy_headers.py  rate_limit.py  request_id.py  request_logging.py
src/vapi/openapi/: __init__.py  config.py  tags.py
src/vapi/server/: core.py  custom_types.py  oauth.py  plugins.py  saq.py  stores.py  tasks.py  tortoise_plugin.py
src/vapi/utils/: assets.py  authentication.py  discord.py  identity.py  images.py  math.py  models.py  strings.py  time.py  validation.py
tests/: conftest.py  factories.py  fixture_models.py  fixtures.py  mocks.py  pg_fixture_models.py
tests/integration/: conftest.py
tests/integration/cli/: __init__.py  test_bootstrap.py  test_developer.py  test_dictionary_sync.py  test_populate_dev_db.py  test_seed.py
tests/integration/domain/: conftest.py  test_after_response_hooks.py  test_assets.py  test_campaign.py  test_campaign_book.py  test_campaign_chapter.py  test_character.py  test_character_blueprint.py  test_character_generation.py  test_character_specials.py  test_character_trait.py  test_company.py  test_company_audit_log.py  test_developer.py  test_dicerolls.py  test_dictionary.py  test_error_pipeline.py  test_global_admin.py  test_global_admin_audit_log.py  test_global_admin_server_logs.py  test_global_admin_users.py  test_identity.py  test_inventory_item.py  test_notes.py  test_oauth.py  test_options.py  test_s3_assets.py  test_static_html_files.py  test_statistics.py  test_system.py  test_user.py  test_user_avatar.py  test_user_deactivation.py  test_user_lookup.py
tests/integration/middleware/: test_authentication.py  test_cache_control_headers.py  test_idempotency.py
tests/unit/: test_constants_userrole.py
tests/unit/cli/: test_restore.py  test_trait_power_syncer.py  test_utils.py
tests/unit/config/: test_base.py  test_identity_settings.py  test_logging_settings.py  test_saq_settings.py
tests/unit/db/: __init__.py  test_archivable.py  test_archive_trigger.py  test_base_model.py  test_character_model.py  test_charactertrait_model.py  test_custom_trait_cascade.py  test_dictionary_model.py  test_dictionaryterm_model.py  test_trait_power_model.py  test_user_model.py
tests/unit/domain/: test_dependencies.py  test_deps_acting_user.py  test_pg_dependencies.py  test_utils.py
tests/unit/lib/: test_audit_changes.py  test_backup_retention.py  test_backup_task.py  test_cache.py  test_crypt.py  test_database.py  test_db_restore.py  test_detail_includes.py  test_exceptions.py  test_guards.py  test_guards_user_active.py  test_log_config.py  test_log_formatters.py  test_patch.py  test_scheduled_tasks.py  test_validation.py
tests/unit/middleware/: test_basic_auth.py  test_idempotency.py  test_proxy_headers.py  test_rate_limit.py  test_request_id.py  test_request_logging.py
tests/unit/scripts/: __init__.py  test_config.py  test_fake.py  test_safety.py
tests/unit/utils/: test_assets.py  test_authentication.py  test_discord.py  test_identity.py  test_images.py  test_math.py  test_models.py  test_strings.py  test_time.py
(+324 files in other folders)
