[project]
    authors = [{ name = "Nate Landau", email = "github@natelandau.com" }]
    dependencies = [
        "asyncio>=4.0.0",
        "beanie>=2.0.1,<3.0.0",
        "boto3>=1.42.27",
        "faker>=40.1.2",
        "httpx-oauth>=0.16.1",
        "inflect>=7.5.0",
        "litestar-granian>=0.14.2",
        "litestar-saq>=0.6.3",
        "litestar[jinja,jwt,redis]>=2.19.0,<3.0.0",
        "msgspec[toml]>=0.20.0",
        "numpy>=2.4.1,<3.0.0",
        "passlib[argon2]>=1.7.4",
        "polyfactory>=3.2.0",
        "pydantic-settings>=2.12.0,<3.0.0",
        "pydantic[email]>=2.12.5,<3.0.0",
        "pymongo>=4.16.0,<5.0.0",
        "python-json-logger>=4.0.0",
        "rich>=14.2.0",
        "ruamel-yaml>=0.19.1",
        "semver>=3.0.4",
    ]
    description = "Valentina Noir is a comprehensive API for managing World of Darkness tabletop role-playing games."
    license = { file = "LICENSE" }
    name = "vapi"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.4.0"

    [project.scripts]
        app = "vapi.__main__:run_cli"

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.19,<0.9.0"]

[dependency-groups]
    dev = [
        "commitizen>=4.11.3",
        "coverage>=7.13.1",
        "djlint>=1.36.4",
        "docker>=7.1.0",
        "duty>=1.6.3",
        "mypy>=1.19.1",
        "nclutils>=2.1.0",
        "prek>=0.2.28",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=7.0.0",
        "pytest-databases[redis]>=0.15.1",
        "pytest-mock>=3.15.1",
        "pytest-repeat>=0.9.4",
        "pytest-sugar>=1.1.1",
        "pytest-xdist>=3.8.0",
        "pytest>=9.0.2",
        "ruff>=0.14.11",
        "shellcheck-py>=0.11.0.1",
        "typos>=1.42.0",
        "yamllint>=1.38.0",
    ]
    docs = ["zensical>=0.0.15"]

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version                    = "0.1.0"
    version_files              = ["src/vapi/__init__.py:__version__"]
    version_provider           = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'if TYPE_CHECKING',
        'pragma: no cover',
    ]
    fail_under = 10
    show_missing = true
    skip_covered = true
    skip_empty = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = ".cache/coverage"
    omit         = ["tests/*"]
    source       = ["src"]

[tool.coverage.xml]
    output = ".cache/coverage.xml"

[tool.djlint]
    extend_exclude = ".vscode, .github, .git, .dev, __pycache__, .cache, .venv, tests"
    ignore         = "H030,H031,H021,H006,H013"
    # ignore_case    = true
    # format_attribute_template_tags = true
    blank_line_after_tag  = "load,extends,include,set"
    blank_line_before_tag = "load,extends,include,set"
    custom_html           = "PageLayout"
    indent                = 4
    max_blank_lines       = 1
    max_line_length       = 100
    use_gitignore         = true

[tool.mypy] # https://mypy.readthedocs.io/en/latest/config_file.html
    cache_dir                   = ".cache/mypy"
    disallow_any_unimported     = false
    disallow_subclassing_any    = false
    disallow_untyped_decorators = false
    disallow_untyped_defs       = true
    exclude                     = ['duties.py', 'tests/']
    follow_imports              = "normal"
    ignore_missing_imports      = true
    junit_xml                   = ".cache/mypy.xml"
    no_implicit_optional        = true
    pretty                      = false
    show_column_numbers         = true
    show_error_codes            = true
    show_error_context          = true
    strict_optional             = false
    warn_redundant_casts        = true
    warn_unreachable            = true
    warn_unused_ignores         = true

[tool.pytest.ini_options]

    addopts = "--color=yes --doctest-modules --strict-config --strict-markers -n auto --dist loadfile"
    cache_dir = ".cache/pytest"
    filterwarnings = ['error', 'ignore:.*Pydantic.*:UserWarning', 'ignore::DeprecationWarning:']
    markers = [
        "clean_db: deletes all non-constant data from the database before the test",
        "no_clean_db: does not delete any data from the database after the test",
        "serial",
    ]
    testpaths = ["tests"]
    xfail_strict = true

[tool.ruff] # https://github.com/charliermarsh/ruff

    exclude        = [".cache", ".dev", ".git", ".venv", "_build", "_site", "build", "dist"]
    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py313"
    [tool.ruff.lint]
        ignore = [
            "ANN002",  # Missing type annotation for `*args`
            "ANN003",  # Missing type annotation for `**kwargs`
            "ANN204",  # missing return type annotation for special method `__init__`
            "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed,
            "B006",    # mutable-argument-default
            "B008",    # function-call-in-default-argument
            "COM812",  # Trailing comma missing"
            "CPY001",  # Missing copyright notice at top of file
            "D107",    # undocumented-public-init
            "E501",    # line-too-long
            "PLC0415", # Imports should be at top of file
            # "FBT001", # Boolean-typed positional argument in function definition
            # "FBT002", # Boolean-typed positional argument in function definition
            "E711",   # Comparison to `None` should be `cond is None`
            "E712",   # use of `== False` instead of `is False`
            "FIX002", # Line contains TODO, consider resolving the issue
            "S311",   # suspicious-non-cryptographic-random-usage
            "TD001",  # invalid-todo-tag
            "TD002",  # Missing author in TODO
            "TD003",  # Missing issue link on the line following this TODO
        ]
        per-file-ignores = { "src/vapi/domain/*.py" = [
            "RUF012", # mutable-class-default
        ], "scripts/*.py" = [
            "PLR0912",
            "PLR0913",
        ], "src/vapi/cli/lib/factories.py" = [
            "D102",
        ], "tests/**/*.py" = [
            "A002",
            "A003",
            "ANN001",  # Missing type annotation for function argument `cls`
            "ANN002",  # Missing type annotation for `*args`
            "ANN003",  # Missing type annotation for `**kwargs`
            "ANN201",  # Missing return type annotation
            "ARG001",  # Unused function argument
            "ARG002",  # Unused method argument
            "ARG005",  # Unused lambda argument
            "D102",
            "ERA001",  # Commented out code
            "F403",
            "F405",    # May be undefined from type imports
            "FBT001",  # Boolean-typed positional argument in function definition
            "PGH003",  # Use specific rule codes when ignoring type issues
            "PLC0415", # Imports should be at top of file
            "PLR0913",
            "PLR2004",
            "S101",
            "SLF001",  # Calling private method
            "W292",    # No blank line at end of file - included b/c cursor struggles to add a trailing newline and burns through requests trying to fix this linting error.
        ], "tests/database/*.py" = [
            "A002",
            "A003",
            "PLR0913",
            "PLR2004",
            "S101",
        ] }
        select = ["ALL"]
        unfixable = [
            "ERA001", # Commented out code
            "F401",   # unused-import
            "F841",   # unused-variable
        ]

        [tool.ruff.lint.mccabe]
            # Unlike Flake8, default to a complexity level of 10.
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false
